updating utterances and using default values for missing slot values

--- a/k8s-chatbot/pom.xml
+++ b/k8s-chatbot/pom.xml
@@ -67,12 +67,7 @@
                             {
                                 "functionName": "KubernetesChatbot",
                                 "description": "Kubernetes Chatbot",
-                                "handler": "org.sample.aws.alexa.chatbot.KubernetesSpeechletRequestStreamHandler",
-                                "triggers": [
-                                    {
-                                        "integration": "Alexa Skills Kit"
-                                    }
-                                ]
+                                "handler": "org.sample.aws.chatbot.k8s.KubernetesBot",
                             }
                         ]
                     </lambdaFunctionsJSON>
