--- a/k8s-chatbot/pom.xml
+++ b/k8s-chatbot/pom.xml
@@ -26,6 +26,16 @@
             <artifactId>lex-java</artifactId>
             <version>0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-ec2</artifactId>
+            <version>1.11.127</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.11.128</version>
+        </dependency>
     </dependencies>
 
     <build>
