adding kops-linux to the distro

--- a/k8s-chatbot/pom.xml
+++ b/k8s-chatbot/pom.xml
@@ -39,6 +39,14 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>${project.basedir}</directory>
+                <includes>
+                    <include>kops-linux</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
